# qollm

./: .gitignore  LICENSE  README.md  pyproject.toml
knowledge/: example_linux_commands.txt  help_7z.txt  help_awk.txt  help_blkid.txt  help_bzip2.txt  help_cat.txt  help_chattr.txt  help_chmod.txt  help_chown.txt  help_cp.txt  help_crontab.txt  help_curl.txt  help_cut.txt  help_date.txt  help_dd.txt  help_df.txt  help_diff.txt  help_dig.txt  help_dmesg.txt  help_du.txt  help_fdisk.txt  help_find.txt  help_free.txt  help_fsck.txt  help_grep.txt  help_groupadd.txt  help_groupdel.txt  help_groupmod.txt  help_gunzip.txt  help_head.txt  help_htop.txt  help_id.txt  help_ifconfig.txt  help_ip.txt  help_journalctl.txt  help_kill.txt  help_killall.txt  help_less.txt  help_ln.txt  help_locate.txt  (+49 more)
quick_one_liner_lookup/: benchmark.py  custom_types.py  dataset.json  main.py  prompt_answer_pairs.csv  prompter.py  prompts.py  settings.py  utils.py
