[tool.poetry]
name = "quick-one-liner-lookup"
version = "0.1.0"
description = "Small python script for Linux terminal one-liner lookup leveraging Ollama LLMs."
authors = ["Ljudevit Jelecevic <ljudevitjelecevic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.6.1"
openai = "^2.14.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
