[tool.poetry]
name = "quick-one-liner-lookup"
version = "0.1.0"
description = "Small python script for Linux terminal one-liner lookup leveraging Ollama LLMs."
authors = ["Ljudevit Jelecevic <ljudevitjelecevic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.6.1"
openai = "^2.14.0"
dotenv = "^0.9.9"
langchain = "^1.2.7"
langchain-huggingface = "^1.2.0"
langchain-chroma = "^1.1.0"
langchain-text-splitters = "^1.1.0"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.7"
sentence-transformers = "^5.2.2"
langchain-ollama = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
